<resources>
    <!-- Interfaz principal -->
    <string name="app_name" translatable="false">Be-Fit</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="conectar">Conectar</string>
    <string name="finalizar">Salir</string>
    <string name="creador">Creado por Sergio Acebal 2ºDAM</string>
    <string name="title_activity_main" translatable="false">Be-Fit</string>
    <string name="modificar">Modificar</string>
    <string name="borrar">Borrar</string>
    <string name="update">Última Modificación: </string>
    <string name="n_entrenamientos">Número de Sesiones: </string>
    <string name="nombre_sesion">Nombre de la Sesion</string>
    <string name="musculo">Primer Ejercicio</string>
    <string name="musculo_1">Segundo Ejercicio</string>
    <string name="musculo_2">Tercer Ejercicio</string>
    <string name="musculo_3">Cuarto Ejercicio</string>
    <string name="aceptar">Aceptar</string>
    <string name="limpiar">Limpiar</string>
    <string name="notas">Notas Opcionales</string>
    <string name="notas_2">Notas Opcionales: </string>
    <string name="actualizar">Actualizar</string>
    <string name="version" translatable="false">1.0.0</string>
    <string name="modificar_sesion">Modificar Sesión</string>
    <string name="cancelar">Cancelar</string>
    <string name="credenciales">Inicio de sesión automático</string>
    <string name="tag">Etiqueta</string>
    <string name="total_registros">Total de Registros: </string>
    <string name="escribe_notas">Escribe aquí tus notas...</string>
    <string name="buscar_sesion">Busca tu sesión...</string>
    <string name="gym_day">Día de Gimnasio</string>
    <string name="biceps">Bíceps</string>
    <string name="triceps">Tríceps</string>
    <string name="pierna">Pierna</string>
    <string name="gemelo">Gemelo</string>
    <string name="buscar_tag">Busca tu etiqueta...</string>
    <string name="click_foto">Presiona en la fotografía para añadir una</string>
    <string name="titulo_opinion">Título</string>
    <string name="escribe_opinion">Escribe aquí tu reporte</string>
    <string name="enviar">Enviar</string>
    <string name="opinion_bug">Reportar error</string>
    <string name="opinion_dar">Opinión</string>
    <string name="registrarse">Registrarse</string>
    <string name="numero_etiquetas">Número de Etiquetas: </string>
    <string name="cross" translatable="false">X</string>

    <!-- Toasts y cuadros de diálgo -->
    <string name="usuario_incorrecto">Nombre de usuario o contraseña incorrectos</string>
    <string name="cuatro_caracteres">El nombre y la contraseña deben de tener 4 caractéres como mínimo</string>
    <string name="error">Ha ocurrido un Error</string>
    <string name="parece_nuevo">¡Parece que eres nuevo!</string>
    <string name="explicacion_registro">Al ser la primera vez que ejecutas la aplicación debes de
        registrarte introduciendo un nombre y una contraseña. \n\nCuando quieras volver a conectarte
        deberás de introducir dichas credenciales otra vez. \n\nNo te preocupes, dentro de la aplicación
        podrás cambiarlas</string>
    <string name="sesion_insertada">Sesión Insertada</string>
    <string name="sesion_repetida">Parece que ya tienes una sesión con dicho nombre ya insertada</string>
    <string name="sesion_5caracteres">Los campos de texto deben de tener mínimo 3 carácteres</string>
    <string name="bienvenido">Bienvenid@</string>
    <string name="funcionar_app">¿Cómo funciona esta aplicación?</string>
    <string name="explicacion_app">Con esta aplicación podras tener un registro de forma intuitiva en tu teléfono
        móvil del seguimiento de tus sesiones del gimnasio. \n\nCon la sección NUEVA SESIÓN podrás introducir una
        nueva sesión, estas sesiones se encontrarán reflejadas en la sección SESIONES, lugar donde podrás seleccionar
        una sesión y trabajar con los pesos de los ejercicios de dicha sesión. \n\nCon la sección ETIQUETAS podrás
        añadir etiquetas para poder catalagar y ordernar tus sesiones. \n\nObviamente puedes también borrar una sesión,
        y por consiguiente todos sus datos en cualquier momento</string>
    <string name="confirmacion">Confirmación</string>
    <string name="desconectarse_app">¿Deseas desconectarte de la aplicación?</string>
    <string name="dicha_bloqueda">Dicha sesión está bloqueada</string>
    <string name="desbloquear">Desbloquear</string>
    <string name="borrado">Borrado</string>
    <string name="pregunta_borrar">¿Estás seguro de que quieres borrar esta sesión?</string>
    <string name="pesos_actualizados">Los pesos de los ejercicios han sido actualizados</string>
    <string name="pesos_obligatorios">Primero inserta los 4 pesos obligatorios</string>
    <string name="bloqueo_sesion">Bloqueo de Sesión</string>
    <string name="pregunta_desbloquear">¿Estás seguro de que quieres bloquear esta sesión? \n\nAl hacerlo no podrás
        modificar nada de la sesión sesión, pero se mantendrá guardada</string>
    <string name="sesion_bloqueada">Sesión Bloqueada</string>
    <string name="sesion_modificada">Sesión Modificada</string>
    <string name="modificacion">Modificación</string>
    <string name="pregunta_modificar">¿Estás seguro de que quieres modificar tus credenciales de acceso?</string>
    <string name="pregunta_borrar_sesiones">¿Estás seguro de que quieres borrar TODAS tus sesiones?</string>
    <string name="ultima_modificacion">Última Modificación: </string>
    <string name="datos_modificados">Datos modificados correctamente</string>
    <string name="sesiones_borradas">Sesiones Borradas</string>
    <string name="entendido">Entendido</string>
    <string name="etiqueta_sesion">Etiqueta para la sesión</string>
    <string name="nueva_tag">Nueva Etiqueta</string>
    <string name="introduce_tag">Introduce el nombre de la etiqueta</string>
    <string name="tag_existente">Parece que ya tienes una etiqueta con ese nombre ya insertada</string>
    <string name="nombre_tag">Nombre de la Etiqueta</string>
    <string name="tag_igual">El nombre de la etiqueta no ha cambiado</string>
    <string name="cuidado">Cuidado</string>
    <string name="no_borrar_tag">Parece que tienes sesiones almacenadas con esta etiqueta que quieres borrar.
        \n\nPara poder borrar la etiqueta primero borra primero las sesiones catalogadas con esta etiqueta</string>
    <string name="tag_introducida">La etiqueta ha sido introducida</string>
    <string name="tag_borrada">La etiqueta ha sido borrada</string>
    <string name="tag_modif">Etiqueta Modificada</string>
    <string name="sesion_borrada">Sesión Borrada</string>
    <string name="no_tags">Parece que no tienes etiquetas almacenadas</string>
    <string name="no_tags_explicacion">Antes de introducir una sesión te recomendamos que introduzcas etiquetas. \n\nLas
    etiquetas son utilizadas para identificar mejor las sesiones y poder agruparlas mejor</string>
    <string name="no_tags_graficas">Parece que no tienes sesiones almacenadas, por lo que no se puede representar
    ningún dato</string>
    <string name="problem_found">¡Ha ocurrido un problema!</string>
    <string name="campos_opiniones">Primero escribe el título y la opinión del reporte</string>
    <string name="gracias_opinion">¡Gracias por enviarnos tu reporte!</string>
    <string name="entre_fechas">Fechas a Comprobar (aaaa-MM-dd)</string>
    <string name="fecha_anterior">Fecha anterior</string>
    <string name="fecha_proxima">Fecha próxima</string>
    <string name="estado_sesion">Estado de la Sesión</string>
    <string name="fechas_mal">El formato de alguna de las fechas no es válido</string>
    <string name="no_datos">No hay datos que representar</string>
    <string name="aviso_foto">Se recomienda no almacenar fotos de gran tamaño</string>
    <string name="error_foto">La fotografía que has intentando introducir es demasiado grande. Prueba con otra</string>

    <!-- Tabs -->
    <string name="sesiones">Sesiones</string>
    <string name="tags">Etiquetas</string>
    <string name="nueva_sesion">Nueva Sesión</string>

    <!-- Menús -->
    <string name="perfil_usuario">Perfil de Usuario</string>
    <string name="ayuda">Ayuda</string>
    <string name="desconectar">Desconectar</string>
    <string name="modificar_perfil">Modificar Perfil de Usuario</string>
    <string name="borrar_sesiones">Borrar Sesiones</string>
    <string name="historial">Ver historial de Sesión</string>
    <string name="bloquear">Bloquear Sesión</string>
    <string name="graficas">Gráficas</string>
    <string name="see_photos">Ver Foto</string>
    <string name="foto_borrada">Foto Borrada</string>
    <string name="foto_modif">Foto Modificada</string>
    <string name="opinion">Enviar un Reporte</string>

    <!-- Criterios -->
    <string name="todos">Todos</string>
    <string name="bloqueados">Bloqueados</string>
    <string name="sin_bloquer">Sin Bloquear</string>
</resources>