<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity"
    android:background="@drawable/fondo"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/labNiNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_usuario"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tbMiNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/labMiContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/contrasena"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tbMiContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <Button
            android:id="@+id/btnModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modificar"
            android:drawableLeft="@drawable/ic_modify_btn"/>

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_remove_fitness"
            android:text="@string/borrar"
            android:textColor="@color/rojo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp">

        <TextView
            android:id="@+id/labUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/labNEntrenamientos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_entrenamientos"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>