<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.AjustesActivity"
    android:orientation="vertical">
    <!--android:background="@drawable/fondo"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:src="@drawable/settings"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <TextView
            android:id="@+id/labNiNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_usuario"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tbMiNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/labMiContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/contrasena"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tbMiContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/labCredenciales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/credenciales"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switchAutomatico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/labUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/labNEntrenamientos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_entrenamientos"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/labNEtiquetas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_etiquetas"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>