<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labModificarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/modificar_sesion"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labNNombreSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_sesion"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tbNNombreSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="60"
                android:text="" />

            <TextView
                android:id="@+id/labNEjercicio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/musculo"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tbNEjercicio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="60"
                android:text="" />

            <TextView
                android:id="@+id/labNEjercicio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/musculo_1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tbNEjercicio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="60"
                android:text="" />

            <TextView
                android:id="@+id/labNEjercicio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/musculo_2"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tbNEjercicio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="60"
                android:text="" />

            <TextView
                android:id="@+id/labNEjercicio4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/musculo_3"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tbNEjercicio4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="60"
                android:text="" />

            <TextView
                android:id="@+id/labMiTag"
                android:text="@string/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spnMiTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Spinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnModificarSesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/modificar" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancelar" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>