<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".Actividades.FeedbackActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/titulo_opinion"/>

    <EditText
        android:id="@+id/tbTituloOpinion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/escribe_opinion"/>

    <EditText
        android:id="@+id/tbCuerpoOpinion"
        android:layout_weight="1"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Spinner
        android:id="@+id/spnTipoOpinion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnEnviarOpinion"
        android:layout_width="100dp"
        android:layout_gravity="right"
        android:layout_height="wrap_content"
        android:text="@string/enviar"/>

</LinearLayout>