<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context=".Actividades.LogeoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <!--<TextView
            android:id="@+id/labNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_usuario"
            android:textSize="15dp"
            android:textStyle="bold" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_usuario">

            <EditText
                android:id="@+id/tbNombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />


        </android.support.design.widget.TextInputLayout>

        <!--<TextView
            android:id="@+id/labContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/contrasena"
            android:textSize="15dp"
            android:textStyle="bold" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena">

            <EditText
                android:id="@+id/tbContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnConectar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/conectar"
                android:drawableLeft="@drawable/ic_connect"/>

            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finalizar"
                android:drawableLeft="@drawable/ic_exit_btn"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/labVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textStyle="bold"
        android:textSize="15dp"
        android:padding="15dp"
        android:layout_gravity="bottom"/>

</LinearLayout>